salesforce_sfdx_QA/main/default/objects/Application_Approvers__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>vlocity_cmt__Application__c</referenceTo>
    <relationshipLabel>Application Approvals</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>