salesforce_sfdx_QA/main/default/objects/Application_Approvers__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>